syntax = "proto3";
package osmosis.gamm.stableswap.v1beta1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "osmosis/gamm/pool-models/stableswap/stableswap_pool.proto";

option go_package = "github.com/osmosis-labs/osmosis/v7/x/gamm/pool-models/stableswap";

service Msg {
  rpc CreateStableswapPool(MsgCreateStableswapPool)
      returns (MsgCreateStableswapPoolResponse);
  rpc AdjustScalingFactors(MsgStableSwapAdjustScalingFactors)
      returns (MsgStableSwapAdjustScalingFactorsResponse);
}

message MsgCreateStableswapPool {
  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];

  PoolParams poolParams = 2 [ (gogoproto.moretags) = "yaml:\"pool_params\"" ];

  repeated cosmos.base.v1beta1.Coin initial_pool_liquidity = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];

  string future_pool_governor = 4
      [ (gogoproto.moretags) = "yaml:\"future_pool_governor\"" ];
}

message MsgCreateStableswapPoolResponse {
  uint64 pool_id = 1 [ (gogoproto.customname) = "PoolID" ];
}

message MsgStableSwapAdjustScalingFactors {
  string scaling_factor_governor = 1
      [ (gogoproto.moretags) = "yaml:\"scaling_factor_governor\"" ];
  uint64 pool_id = 2 [ (gogoproto.customname) = "PoolID" ];
}

message MsgStableSwapAdjustScalingFactorsResponse {}
